# project

./: Dockerfile  README.md  compose.yaml  ecosystem.config.cjs  langgraph_agentic_CV_parser.py  langgraph_agentic_CV_parser_without_mergeLLM.py  main.py  pyproject.toml  rcsl_resume.py  rcsl_resume_chain.py  rcsl_resume_chain_api.py  rcsl_resume_graph_api.py  resume.json  scratch_test.py
agent/: CV_parsing_agent.py
app/: routes.py
app/api/: CV_data_api.py  CV_data_only.py  langgraph_CVParser.py  pdf_parser.py
chain/: CV_data_chain.py  CV_data_chain_new.py  CV_data_chain_ollama_cloude.py  CV_data_chain_time.py  pdf_parser_chain.py
data_pipeline/: file_data_extraction.py  pdf_data.py  pdf_data_pytesseract.py
llm/: base.py
schemas/: SpaceFix_Schema.py  cv_data_schema.py
scratch/: test_conn.py  test_merged_agent.py  test_parser.py  test_pytesseract_extraction.py
