[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "langchain-core>=1.2.18",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "openrouter>=0.9.1",
    "pydantic>=2.12.5",
    "pypdf[image]>=6.8.0",
    "python-dotenv>=1.2.2",
]
